# unitree_go2_house_nav

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_core/share/go2_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_driver/share/go2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_navigation2/share/go2_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_perception/share/go2_perception/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_slam/share/go2_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_twist_bridge/share/go2_twist_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/Unitree_GO2_ws/src/go2_cruising/: package.xml  setup.cfg  setup.py
src/Unitree_GO2_ws/src/go2_cruising/go2_cruising/: go2_cruising_client.py  go2_cruising_service.py
src/Unitree_GO2_ws/src/go2_cruising/launch/: go2_cruising.launch.py
src/Unitree_GO2_ws/src/go2_cruising/params/: go2_cruising_service.yaml
src/Unitree_GO2_ws/src/go2_ctrl/: package.xml  setup.cfg  setup.py
src/Unitree_GO2_ws/src/go2_description/: package.xml  radar_tf
src/Unitree_GO2_ws/src/go2_drive_py/: package.xml  setup.cfg  setup.py
src/Unitree_GO2_ws/src/go2_goal_nav/: package.xml  setup.py  (+1 more)
src/go2_obstacle_avoidance/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_obstacle_avoidance/config/: obstacle_avoidance.yaml
src/go2_obstacle_avoidance/go2_obstacle_avoidance/: obstacle_avoidance_node.py
src/go2_obstacle_avoidance/launch/: obstacle_avoidance.launch.py
(+141 files in other folders)
