<?xml version="1.0"?>
<package format="3">
  <name>go2_obstacle_avoidance</name>
  <version>0.0.1</version>
  <description>Obstacle avoidance safety layer for Unitree GO2</description>
  <maintainer email="martinnguyen343@gmail.com">Martin Nguyen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
