<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_cruising</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="houshoulaopo@gmail.com">m2m</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>ros2launch</depend>
  <depend>nav_msgs</depend>
  <depend>go2_inter</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
